--- a/template.ejs
+++ b/template.ejs
@@ -4,7 +4,7 @@
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
 		<meta content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" name="viewport">
-		<title>MST Workflow</title>
+		<title>Mescal UI</title>
 	</head>
 	<body>
 		<div class="app"></div>
