--- a/template.ejs
+++ b/template.ejs
@@ -9,6 +9,6 @@
 	<body>
 		<div class="app"></div>
     <div class="meson-modal-container" />
-    <div class="meson-display-container" />
+    <div class="meson-dropdown-container" />
 	</body>
 </html>
