--- a/example/main.css
+++ b/example/main.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   overscroll-behavior-y: none;
+  font-family: Helvetica Neue For Number, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Helvetica Neue,
+    Helvetica, Arial, sans-serif, Wenquanyi Micro Hei;
 }
 
 body * {
