remove modal container; add GA

--- a/template.ejs
+++ b/template.ejs
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="app"></div>
-    <div class="meson-modal-container" />
     <div class="meson-dropdown-container" />
+    <title><%= htmlWebpackPlugin.options.trackingCode %></title>
 	</body>
 </html>
