--- a/template.ejs
+++ b/template.ejs
@@ -9,6 +9,6 @@
 	<body>
 		<div class="app"></div>
     <div class="meson-dropdown-container" />
-    <title><%= htmlWebpackPlugin.options.trackingCode %></title>
+    <%= htmlWebpackPlugin.options.trackingCode %>
 	</body>
 </html>
